WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168345
[CURL] ResourceError created with error information should have default type Type::General
https://bugs.webkit.org/show_bug.cgi?id=168345
Summary
[CURL] ResourceError created with error information should have default type ...
Basuke Suzuki
Reported
2017-02-14 16:43:07 PST
CURL implementation of ResourceError has default value Type::General for type argument as like other implementations, but it is Type::None. This causes assertion error later. Source/WebCore/platform/network/curl/ResourceError.h ResourceError(const String& domain, int errorCode, const URL& failingURL, const String& localizedDescription, Type type = Type::Null)
Attachments
fix
(721 bytes, patch)
2017-02-14 16:51 PST
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(1.84 KB, patch)
2017-02-14 18:13 PST
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2017-02-14 16:51:37 PST
Created
attachment 301564
[details]
fix
Basuke Suzuki
Comment 2
2017-02-14 18:13:03 PST
Created
attachment 301569
[details]
Patch
WebKit Commit Bot
Comment 3
2017-02-14 18:52:38 PST
Comment on
attachment 301569
[details]
Patch Clearing flags on attachment: 301569 Committed
r212340
: <
http://trac.webkit.org/changeset/212340
>
WebKit Commit Bot
Comment 4
2017-02-14 18:52:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug