[CURL] ResourceError created with error information should have default type Type::General https://bugs.webkit.org/show_bug.cgi?id=168345

Patch by Basuke Suzuki <Basuke.Suzuki@am.sony.com> on 2017-02-14
Reviewed by Alex Christensen.

ResourceError has separate implementaion for each platform
so that the interface should be same.
On CURL port, the constructor with error information has
different default value on `type` parameter. It is Type::Null but other implementaitons have Type::General.
This causes some ResourceError is created inconsistent.

* platform/network/curl/ResourceError.h:
(WebCore::ResourceError::ResourceError):

Canonical link: https://commits.webkit.org/185372@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212340 268f45cc-cd09-0410-ab3c-d52691b4dbfc